--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header class="header">
-    <h1 class="logo">TECH.<span>DEV</span></h1>
+    <h1 class="logo">TECH.<span>DEVELOPER</span></h1>
     <nav>
       <ul class="nav-links">
         <li><a href="#hero">Accueil</a></li>
