--- a/index.html
+++ b/index.html
@@ -2,80 +2,42 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>RAZA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SKET SHOP</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <header class="header">
-    <h1 class="logo">TECH.<span>DEVELOPER</span></h1>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="#hero">Accueil</a></li>
-        <li><a href="#apropos">À propos</a></li>
-        <li><a href="#projets">Projets</a></li>
-        <li><a href="#cv">CV</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+  <header>
+    <h1>🛍️ SKET SHOP</h1>
+    <p>Explorez nos articles tendance et futuristes</p>
   </header>
 
-  <section id="hero" class="hero-section">
-    <div class="hero-content">
-      <img src="photo.jpg" alt="Photo Sket Moov" class="profile-pic"/>
-      <h2>Bienvenue, moi c'est <span>Tiavina Famenonisoa RAZAFIMAHEFA</span></h2>
-      <p>Développeur Web & Créateur digital basé à Madagascar</p>
-    </div>
-  </section>
-
-  <section id="apropos" class="section">
-    <h2 class="section-title">À propos</h2>
-    <p class="section-text">
-      Passionné par le code, le design et la vidéo, je crée des expériences numériques immersives.
-    </p>
-    <div class="skills">
-      <div>HTML/CSS/JS</div>
-      <div>React / Node</div>
-      <div>Unity 3D</div>
-      <div>Montage Vidéo</div>
-    </div>
-  </section>
-
-  <section id="projets" class="section">
-    <h2 class="section-title">Projets</h2>
-    <div class="project-card">
-      <img src="projet1.jpeg" alt="Projet Unity" />
-      <div class="project-info">
-        <h3>GTA-like sous Unity</h3>
-        <p>Jeu open world mobile avec conduite, développé avec Unity.</p>
-        <a href="#" class="btn">Voir plus</a>
+  <section class="products">
+    <div class="product-card">
+      <img src="assets/chaussure1.png" alt="Chaussure futuriste">
+      <h3>Chaussure V1</h3>
+      <p>Prix : 79€</p>
+      <div class="buttons">
+        <button class="buy">Acheter</button>
+        <button class="view">Voir +</button>
       </div>
     </div>
-  </section>
 
-  <section id="cv" class="section">
-    <h2 class="section-title">Mon CV</h2>
-    <p>Téléchargez mon CV PDF pour voir mon parcours complet.</p>
-    <a href="assets/cv_sketmoov.pdf" class="btn" download>Télécharger le CV</a>
-  </section>
-
-  <section id="contact" class="section">
-    <h2 class="section-title">Contact</h2>
-    <p>Email : <a href="mailto:sketmoov@email.com">sketmoov@email.com</a></p>
-    <p>WhatsApp : +261 XX XX XXX XX</p>
-    <p>Facebook : <a href="mailto:sketmoov@email.com">@Tiavina_raza</a></p>
-  </section>
-
-  <footer class="footer">
-    <p>© 2025 Dev.Young Tous droits réservés.</p>
-    <div class="socials">
-      <a href="#">YouTube</a>
-      <a href="#">LinkedIn</a>
-      <a href="#">Instagram</a>
+    <div class="product-card">
+      <img src="assets/lunette1.png" alt="Lunettes VR">
+      <h3>Lunette VR-X</h3>
+      <p>Prix : 129€</p>
+      <div class="buttons">
+        <button class="buy">Acheter</button>
+        <button class="view">Voir +</button>
+      </div>
     </div>
-  </footer>
 
-  <script src="script.js"></script>
+    <!-- Ajoute + de produits ici -->
+  </section>
+
+  <footer>
+    <p>© 2025 SKET SHOP - Tous droits réservés</p>
+  </footer>
 </body>
 </html>
