--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     .logo {
       font-family: 'Pacifico', cursive;
       font-size: 1.8rem;
-      color: #001ec5;
+      color: #405dff;
       user-select: none;
     }
 
@@ -86,7 +86,7 @@
       transition: color 0.3s;
     }
     .actions button:hover {
-      color: #000000;
+      color: #ff4081;
     }
 
     .hero {
